syntax = "proto3";

package helloworld;

// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  
  // Server streaming RPC
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply) {}
  
  // Client streaming RPC
  rpc SayHelloClientStream (stream HelloRequest) returns (HelloReply) {}
  
  // Bidirectional streaming RPC
  rpc SayHelloBidiStream (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
  int32 age = 2;
  repeated string hobbies = 3;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  string timestamp = 2;
  int32 response_code = 3;
} 